--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
 	"description": "WebGPU examples from webgpufundamentals.org meant for practice purpose.",
 	"main": "index.js",
 	"scripts": {
-		"dev": "tsc && nodemon index.js"
+		"dev": "npx webpack && nodemon index.js"
 	},
 	"keywords": [],
 	"author": "",
@@ -12,9 +12,13 @@
 	"dependencies": {
 		"@webgpu/types": "^0.1.39",
 		"express": "^4.18.2",
-		"path": "^0.12.7"
+		"path": "^0.12.7",
+		"raw-loader": "^4.0.2"
 	},
 	"devDependencies": {
-		"nodemon": "^3.0.1"
+		"nodemon": "^3.0.1",
+		"ts-loader": "^9.5.1",
+		"webpack": "^5.89.0",
+		"webpack-cli": "^5.1.4"
 	}
 }
